--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"postcss": "^8.3.6",
 		"postcss-modules": "^4.2.2",
 		"prettier": "2.4.0",
+		"process": "^0.11.10",
 		"typescript": "~4.3.5"
 	},
 	"dependencies": {
